# floship

./: .gitignore  docker-compose.dev.yml  pyproject.toml  requirements.txt
src/app/: choices.py  settings.py  urls.py
src/app/routers/: DefaultRouter.py  StoreRouter.py  WarehouseRouter.py  __init__.py
src/store/: admin.py  models.py  serializers.py  urls.py  views.py
src/store/migrations/: 0001_initial.py  0002_auto_20220220_0310.py
src/warehouse/: admin.py  models.py  serializers.py  urls.py  views.py
src/warehouse/migrations/: 0001_initial.py  0002_auto_20220220_0310.py
